fix tab menu alignment issue (#422)

--- a/themes/ansible-community/sass/_homepage-tab-menu-band.scss
+++ b/themes/ansible-community/sass/_homepage-tab-menu-band.scss
@@ -5,7 +5,6 @@
   background-color: $grey94;
   display: grid;
   grid-template-columns: repeat(5 1fr);
-  gap: 20px;
   @media screen and (max-width: 992px) {
     display: none;
   }
@@ -18,5 +17,24 @@
   a {
     text-decoration: none;
     color: $cyan;
+  }
+}
+
+.tab-menu-anchor {
+  display: flex;
+  padding: 1.75rem 1.75rem 1rem 1.75rem;
+  justify-content: center;
+  font-size: $font-lg;
+  line-height: 40px;
+  img {
+    float: left;
+    margin-right: 0.25rem;
+  }
+  p {
+    white-space: nowrap;
+  }
+  &:hover {
+    background-color: $white;
+    color: $navy;
   }
 }
